--- a/package.json
+++ b/package.json
@@ -69,8 +69,10 @@
 		"aos": "2.3.4",
 		"body-scroll-lock": "3.1.5",
 		"core-js": "3.15.2",
+		"html2canvas": "1.3.2",
 		"husky": "7.0.1",
 		"jquery": "3.6.0",
+		"locomotive-scroll": "4.1.2",
 		"lozad": "1.16.0",
 		"ninelines-sharing": "1.5.8",
 		"ninelines-ua-parser": "1.1.6",
